# Softwareeinfuehrung

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  Frageliste_Spalte_H.csv  MEMORY.md  README.md  SPEC.md  alembic.ini  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_vendors_recat.py  0003_poc_support.py
app/: config.py  database.py  main.py  scheduler.py
app/api/: audit.py  auth.py  catalog.py  comments.py  decisions.py  fields.py  reminders.py  requests.py  revisions.py  users.py  vendors.py
app/core/: auth_deps.py  csrf.py  errors.py  security.py
app/models/: __init__.py  catalog.py  enums.py  field.py  reminder.py  request.py  revision.py  role.py  user.py  vendor.py
app/schemas/: auth.py  catalog.py  comment.py  common.py  decision.py  request.py  user.py  vendor.py
app/seed/: bit_fc.py  fields.py  roles.py  run_seed.py  system_categories.py  users.py  vendors.py
app/services/: audit.py  catalog.py  category_logic.py  field_admin.py  mailer.py  progress.py  reminders.py  responsibility.py  revisions.py  workflow.py
app/static/: app.css  (+1 more)
deploy/: install.sh  post_install.md  sysintro.nginx.conf  sysintro.service  uninstall.sh
docs/: API.md  ARCHITECTURE.md  CLOUDFLARE_TLS.md  FRAGELISTE_ANTWORTEN.md  GOLIVE.md  INSTALL.md  OPERATIONS.md  PRESENTATION.md  SECURITY.md  STATUS.md  USER_GUIDE.md  architecture.excalidraw  cio_pitch.excalidraw
tests/: conftest.py  test_auth.py  test_catalog.py  test_category_logic.py  test_reminders.py  test_responsibility.py  test_revisions.py  test_workflow.py
(+35 files in other folders)
