[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "sysintro"
version = "0.1.0"
description = "SysIntro – digitised system-introduction approval workflow (demo)"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "sqlalchemy==2.0.30",
    "alembic==1.13.1",
    "argon2-cffi==23.1.0",
    "python-jose[cryptography]==3.3.0",
    "pydantic-settings==2.2.1",
    "pydantic[email]==2.7.1",
    "apscheduler==3.10.4",
    "jinja2==3.1.4",
    "python-multipart==0.0.9",
    "aiofiles==23.2.1",
    "slowapi==0.1.9",
    "starlette==0.37.2",
    "itsdangerous==2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.0",
    "pytest-asyncio==0.23.6",
    "httpx==0.27.0",
    "freezegun==1.5.0",
    "ruff==0.4.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
